tool-filter-button, tool-filters: Select previous filter (if any)

https://bugzilla.gnome.org/show_bug.cgi?id=761158